discussion/kv_engine/170541/170541_rev20_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 14:41:04.000000000
Message: 
Uploaded patch set 20.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 15:09:59.000000000
Message: 
Patch Set 20: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25814/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25814/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17728/ : FAILURE

Failure of GoogleTest "STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_value_only":

<pre>
[ RUN      ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_value_only
[2022-02-16T14:50:36.538Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:554: Failure
[2022-02-16T14:50:36.538Z] Value of: result
[2022-02-16T14:50:36.538Z]   Actual: true
[2022-02-16T14:50:36.538Z] Expected: false
[2022-02-16T14:50:36.538Z] [  FAILED  ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_value_only, where GetParam() = ("persistent_magma", "value_only") (101 ms)
STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17728/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14505/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43991/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37086/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18450/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 15:52:37.000000000
Message: 
Patch Set 20:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15659/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14505/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43991/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37086/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17732/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18450/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25815/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
